# plesiosaurus

./: .env  Cargo.toml  Dockerfile  configuration.yaml  readme.md
.github/workflows/: general.yml
migrations/: 20220117224028_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  model.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
