[package]
name = "plesiosaurus"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "plesiosaurus"

[dependencies]
actix-web = "=4.0.0-beta.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.11"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-graphql = { version = "3.0", features = ["chrono", "uuid"] }
async-graphql-actix-web = "3.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "json",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"
